--- a/index.html
+++ b/index.html
@@ -51,28 +51,26 @@
 
     <div class="background">
         <div class="introduction">
+            <div class="introdes">
             <h1>Sang Park</h1>
             <h3>Applied Mathematics and Mechanical Engineering</h3>
             <div class="socialmedia">
                 <div class="wrapper">
                     <a href="https://www.linkedin.com/in/sang-park-04652b16a/" target="_blank">
-                    <div class="button">
-                        <div class="icon">
-                            <i class="fab fa-linkedin-in"></i>
-                        </div>
-                        <span>LinkedIn</span>
+                    <div class="icon linkedin">
+                        <div class="tooltip">LinkedIn</div>
+                        <span><i class="fab fa-linkedin-in"></i></span>
                     </div>
                     </a>
 
-                    <a href="mailto:sangpk@outlook.com" target="_blank">
-                    <div class="button">
-                        <div class="icon">
-                            <i class="far fa-envelope"></i>
-                        </div>
-                        <span>E-Mail</span>
+                    <a href="mailto: sangpk@outlook.com">
+                    <div class="icon email">
+                        <div class="tooltip">Email</div>
+                        <span><i class="far fa-envelope"></i></span>
                     </div>
                     </a>
                 </div>
+            </div>
             </div>
         </div>
     </div>
@@ -83,15 +81,14 @@
     </div>
 
     <section>
-        <div class="profilepic">
-            <img style="width: 375px; height: 500px;" src="images/IMG_1976.JPG" alt="Sang Park Profile Pic">
-        </div>
+        <div class="aboutinfo">
+        <div class="profilepic"></div>
 
         <div class="about">
             <h3>Hi, I'm Sang Park.</h3>
             <p>I  am a dedicated Applied Mathematics and Mechanical Engineering student who has exemplified leadership and teamwork skills through multiple group projects. I have experienced and built a deep understanding in a variety of engineering topics, such as control systems, mechanical systems, automation, and app development. 
                 <br><br>
-            I am passionate about analyzing data and statistics. I also take great interest in optimizing control systems and mechanical systems. I hope to become a data scientist or mechanical engineer in order to display my skills that I have built through my experiences and pursue my passions. </p>
+            I am passionate about analyzing data and statistics. I also take great interest in optimizing control systems and mechanical systems. I hope to become a data scientist or mechanical engineer in order to display my skills and pursue my passions. </p>
         </div>
 
         <div class="skills">
@@ -107,10 +104,35 @@
                 <li>Microsoft Powerpoint</li>
             </ul>
         </div>
+        </div>
+
+        <div class="mobileabout">
+            <div class="mobileprofilepic"></div>
+
+            <div class="mobileaboutdes">
+                <h3>Hi, I'm Sang Park.</h3>
+                <p>I  am a dedicated Applied Mathematics and Mechanical Engineering student who has exemplified leadership and teamwork skills through multiple group projects. I have experienced and built a deep understanding in a variety of engineering topics, such as control systems, mechanical systems, automation, and app development. 
+                    <br><br>
+                I am passionate about analyzing data and statistics. I also take great interest in optimizing control systems and mechanical systems. I hope to become a data scientist or mechanical engineer in order to display my skills and pursue my passions. </p>
+            </div>
+
+            <div class="mobileskills">
+                <h3>my skills.</h3>
+                    <p>Siemens NX</p>
+                    <p>MATLAB</p>
+                    <p>SolidEdge</p>
+                    <p>C</p>
+                    <p>HTML/CSS</p>
+                    <p>Microsoft Word</p>
+                    <p>Microsoft Excel</p>
+                    <p>Microsoft Powerpoint</p>
+            </div>
+        </div>
     </section>
     </div>
 
-    <div id ="education" class="education">
+    <div id="education" class="height70"></div>
+    <div class="education">
         <div class="educationtitle">
             my education.
         </div>
@@ -137,7 +159,7 @@
                         Kingston, Ontario, Canada
                     </div>
 
-                    <p>Queen's University has allowed me to pursue a unique degree that could satisfy both my interests in engineering and mathematics. Through the Applied Mathematics and Mechanical Engineering program, I was able to learn high-level mathematical concepts and solve open-ended problems through critical and creative thinking. This program has not only enhanced my problem solving and analytical skills, but also let me improve on my teamwork and communication skills. 
+                    <p>Queen's University has allowed me to pursue a unique degree that could satisfy both my interests in engineering and mathematics. Through the Applied Mathematics and Mechanical Engineering program, I was able to learn high-level mathematical concepts and also solve open-ended problems through critical and creative thinking. This program has not only enhanced my problem solving and analytical skills, but also helped me improve on my teamwork and communication skills. 
                         <br><br>
                     The rigorous courseload that this program offers has inspired me to pursue mechanical engineering or data science. Through courses such as Machine Design I, Kinematics, Dynamics, and Vibrations, I got the opportunity to understand and design mechanical systems. Math courses like Real Analysis, Algebraic Structures, and Functions of a Complex Variable, has challenged me to understand abstract theories and concepts. My interests in data analysis grew due to courses like Probability I and Management of Experimental Data. Finally, design courses and mechanical engineering labs has given me the opportunity to apply and analyze the theories that were learned in class.</p>
                 </div>
@@ -153,7 +175,7 @@
                         Calgary, Alberta, Canada
                     </div>
 
-                    <p>Webber Academy, one of the highest ranked high schools in Alberta, has inspired me to pursue engineering and mathematics. The tight-knit community allowed me to develop a strong relationship with my peers and my teachers. Furthermore, the smaller community increased my engagement in the classroom, expecially in STEM courses. Webber Academy was also where I instilled a team-oriented mindset and developed my leadership capabilities as the captain of the basketball team. I was also able to be part of a team that raised over $40,000 for the Terry Fox Foundation.</p>
+                    <p>Webber Academy, one of the highest ranked high schools in Alberta, has inspired me to pursue engineering and mathematics. The tight-knit community allowed me to develop a strong relationship with my peers and teachers. Furthermore, the smaller community increased my engagement in the classroom, expecially in STEM courses. Webber Academy was also where I instilled a team-oriented mindset and developed my leadership capabilities as the captain of the basketball team. I was also able to be part of a team that raised over $40,000 for the Terry Fox Foundation.</p>
                 </div>
             </div>
         </div>
@@ -176,7 +198,7 @@
                         <div class="p1photo">
                         </div>
                         <div class="p1description">
-                        <p>A gearbox system was designed to maximize the torque and speed of a small car. The system was a shifting one-stage gear network that consisted of gears, pinions, input and output shafts, bearings and housing. After calculations regarding the number of teeth and diameter of the gears and pinions, the system was modelled using Siemens NX and prepared for 3D printing.</p>
+                        <p>A gearbox system was designed to maximize the torque and speed of a small car. The system was a shifting one-stage gear network that consisted of gears, pinions, input and output shafts, bearings, and housing. After calculations regarding the number of teeth and diameter of the gears and pinions, the system was modelled using Siemens NX and prepared for 3D printing.</p>
                         </div>
 
                         <div class="mobileed">
@@ -206,7 +228,7 @@
                         <i class="fas fa-minus"></i>
                     </a>
                     <div class="projectdescription">
-                        <p>An autonomous system that uses Lloyd's deployment algorithm was designed to program drones to effectively measure the density of vegetation in an area of the Amazon Rainforest. The goal for this project was to optimize the identification process to facilitate reforestation in the largest forest in the world.</p>
+                        <p>An unknown "black box" system was analyzed and controlled for this project. By using principles of control theory, the system was designed to control the quality of drinking water. In order to achieve this, we analyzed the controllability and stability of the system. Some of the tools that were used for this project include PID-controllers, Bode and Nyquist plots, transfer functions, and the linear time-invariance property.</p>
                     </div>
                 </div>
 
@@ -217,7 +239,7 @@
                         <i class="fas fa-minus"></i>
                     </a>
                     <div class="projectdescription">
-                        <p>A filtration system was designed to eliminate macro and microplastics in drainage and sewage system. The designed solution used a dissolved air flotation process to effectively eliminate plastic in wastewater before it enters the treatment plant.</p>
+                        <p>A filtration system was designed to eliminate macro and microplastics in drainage and sewage systems. The designed solution used a dissolved air flotation process to effectively eliminate plastic in wastewater before it enters the treatment plant.</p>
                     </div>
                 </div>
 
@@ -233,7 +255,7 @@
                         <div class="p5description">
                             <p>A mobile application was made using JavaScript and Android Studio in order to provide guidance to victims and educate other young adults. The target audience for this project were those aged 16 to 24, which was requested by Sexual Assault Centre Kingston. 
                                 <br><br>
-                                The app consisted of four main sections: Resources, Scenarios, Consent, and Direct Questions. The Resources section was designed to provide the users with several helplines and sources to those in need. The Scenarios section is a quiz section that places the user in an observer's point of view where they witness an event taking place. The user would then choose an action they might take in order to help the victim. The Direct Questions section leads the user through a specific set of events that might have occurred to them. As the user specifies the situation more, the app will guide them to a resource that is suited for their circumstances. Finally, the Consent section provides general information regarding consent and the laws surrounding it.</p>
+                                The app consisted of four main sections: Resources, Scenarios, Consent, and Direct Questions. The Resources section was designed to provide the users with several helplines and sources. The Scenarios section is a quiz section that places the user in an observer's point of view where they witness an event taking place. The user would then choose an action they might take in order to help the victim. The Direct Questions section leads the user through a specific set of events that might have occurred to them. As the user specifies the situation in more depth, the app will guide them to a resource that is suited for their circumstances. Finally, the Consent section provides general information regarding consent and the laws surrounding it.</p>
                         </div>
 
                         <div class="mobileed2">
@@ -241,7 +263,7 @@
                             <div class="p5mobiledes">
                                 <p>A mobile application was made using JavaScript and Android Studio in order to provide guidance to victims and educate other young adults. The target audience for this project were those aged 16 to 24, which was requested by Sexual Assault Centre Kingston. 
                                     <br><br>
-                                    The app consisted of four main sections: Resources, Scenarios, Consent, and Direct Questions. The Resources section was designed to provide the users with several helplines and sources to those in need. The Scenarios section is a quiz section that places the user in an observer's point of view where they witness an event taking place. The user would then choose an action they might take in order to help the victim. The Direct Questions section leads the user through a specific set of events that might have occurred to them. As the user specifies the situation more, the app will guide them to a resource that is suited for their circumstances. Finally, the Consent section provides general information regarding consent and the laws surrounding it.</p>
+                                    The app consisted of four main sections: Resources, Scenarios, Consent, and Direct Questions. The Resources section was designed to provide the users with several helplines and sources. The Scenarios section is a quiz section that places the user in an observer's point of view where they witness an event taking place. The user would then choose an action they might take in order to help the victim. The Direct Questions section leads the user through a specific set of events that might have occurred to them. As the user specifies the situation in more depth, the app will guide them to a resource that is suited for their circumstances. Finally, the Consent section provides general information regarding consent and the laws surrounding it.</p>
                             </div>
                         </div>
                     </div>
@@ -254,7 +276,7 @@
                         <i class="fas fa-minus"></i>
                     </a>
                     <div class="projectdescription">
-                        <p>A sustainable Mars Colony was designed using the resources that are already present on the planet and the few that can be brought from Earth. The modelling of this design was split into four main sections: Space Travel, Mining and Mineral Processing, Agriculture and Water, and Power. The amount of propellant and optimal route for travel was analyzed. Furthermore, both the mining process and the food and water supply were also analyzed. Finally, the power supply to provide for approximately 1000 humans was also designed.</p>
+                        <p>A sustainable Mars Colony was designed using the resources that are already present on the planet and the few that can be brought from Earth. The modelling of this design was split into four main sections: Space Travel, Mining and Mineral Processing, Agriculture and Water, and Power. The amount of propellant and optimal route for travel was analyzed. Both the mining process and the food and water supply were also analyzed. Finally, the power supply to provide for approximately 1000 humans was also designed.</p>
                     </div>
                 </div>
             </div>
@@ -277,5 +299,7 @@
         </div>
     </footer>
     
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="scroll.js"></script>
 </body>
 </html>
