--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         <label for="active" class="menubtn"><i class="fas fa-bars"></i></label>
         <div class="mobiledrop">
             <ul class="mobilemenu">
-                <li><a href="#about">about.</a></li>
-                <li><a href="#education">education.</a></li>
-                <li><a href="#projects">projects.</a></li>
-                <li><a href="Resume.pdf" target="_blank">resume.</a></li>
-                <li><a href="korean.html">한국어</a></li>
+                <li onclick="x()"><a href="#about">about.</a></li>
+                <li onclick="x()"><a href="#education">education.</a></li>
+                <li onclick="x()"><a href="#projects">projects.</a></li>
+                <li onclick="x()"><a href="Resume.pdf" target="_blank">resume.</a></li>
+                <li onclick="x()"><a href="korean.html">한국어.</a></li>
             </ul>
         </div>
     </header>
