--- a/korean.html
+++ b/korean.html
@@ -40,11 +40,11 @@
         <label for="active" class="menubtn"><i class="fas fa-bars"></i></label>
         <div class="mobiledrop">
             <ul class="mobilemenu">
-                <li><a href="#about">자기 소개.</a></li>
-                <li><a href="#education">교육.</a></li>
-                <li><a href="#projects">프로젝트.</a></li>
-                <li><a href="Resume.pdf" target="_blank">이력서.</a></li>
-                <li><a href="index.html">english.</a></li>
+                <li onclick="x()"><a href="#about">자기 소개.</a></li>
+                <li onclick="x()"><a href="#education">교육.</a></li>
+                <li onclick="x()"><a href="#projects">프로젝트.</a></li>
+                <li onclick="x()"><a href="Resume.pdf" target="_blank">이력서.</a></li>
+                <li onclick="x()"><a href="index.html">english.</a></li>
             </ul>
         </div>
     </header>
@@ -56,15 +56,19 @@
             <h3>응용 수학 및 기계 공학</h3>
             <div class="socialmedia">
                 <div class="wrapper">
+                    <a href="https://www.linkedin.com/in/sang-park-04652b16a/" target="_blank">
                     <div class="icon linkedin">
                         <div class="tooltip">LinkedIn</div>
                         <span><i class="fab fa-linkedin-in"></i></span>
                     </div>
+                    </a>
 
+                    <a href="mailto: sangpk@outlook.com">
                     <div class="icon email">
                         <div class="tooltip">Email</div>
                         <span><i class="far fa-envelope"></i></span>
                     </div>
+                    </a>
                 </div>
             </div>
             </div>
@@ -127,7 +131,8 @@
     </section>
     </div>
 
-    <div id ="education" class="education">
+    <div id="education" class="height70"></div>
+    <div class="education">
         <div class="educationtitle">
             교육
         </div>
@@ -143,12 +148,6 @@
                         <h4>응용 수학 및 기계 공학 학사</h4>
                         <h5>2021년 졸업 예정</h5>
                     </div>
-
-                    <!--<div class="mobile2">
-                        <h4>Bachelor of Applied Science</h4>
-                        <h4>Applied Mathematics and Engineering, Mechanical Option</h4>
-                        <h4>Class of 2021</h4>
-                    </div> -->
 
                     <div class="location">
                         Kingston, Ontario, Canada
@@ -170,7 +169,7 @@
                         Calgary, Alberta, Canada
                     </div>
 
-                    <p>앨머타주에서 매년 최고의 고등학교로 뽑히는 Webber Academy는 한학년에 60명 미만의 소그룹의 학교이며 학교에 다니는 동안 선생님들과 교우들과의 관계에서</p>
+                    <p>앨버타주에서 매년 최고의 고등학교로 뽑히는 Webber Academy는 한학년에 60명 미만의 소그룹의 학교이며 학교에 다니는 동안 선생님들과 교우들과의 관계에서 갈등을 대하와 설득으로 극복하고 신뢰를 쌓아가는 노하우를 축적하고 하루하루 성장하는 나자신을 발견했을때 자신감과 만족감을 얻었으며 특히 교내 농구팀 주장으로 활약하며 팀워크를 다지고 팀원으로서 역할에 충실하며 마음가짐을 다지는 훈련을 하였습니다. 또하, Terry Fox 재단 기금 모음팀의 일원으로 $40,000을 모금하는 성과를 거뒀습니다.</p>
                 </div>
             </div>
         </div>
@@ -178,14 +177,14 @@
 
     <div id="projects" class="projects">
         <div class="projectstitle">
-            my projects.
+            프로젝트
         </div>
         
         <div class="projectlist">
             <div class="accordian">
                 <div class="accordian-item" id="project1"> 
                     <a class="accordian-link" href="#project1">
-                        <p>Gearbox Project</p>
+                        <p>기어박스 프로젝트</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
                     </a>
@@ -193,13 +192,13 @@
                         <div class="p1photo">
                         </div>
                         <div class="p1description">
-                        <p>A gearbox system was designed to maximize the torque and speed of a small car. The system was a shifting one-stage gear network that consisted of gears, pinions, input and output shafts, bearings, and housing. After calculations regarding the number of teeth and diameter of the gears and pinions, the system was modelled using Siemens NX and prepared for 3D printing.</p>
+                        <p>소형 자동차의 토크와 속도를 최대화하기 위하여 고안된 기어박스 시스템은 기어, 톱니 바퀴, 입출력 샤프트, 베어링과 하우징으로 구성된 shifting one-stage gear network 입니다. 톱니 개수, 기어와 톱니 바퀴의 직경 등을 계산한 후 Siemens NX를 적용한 모델링으로 완성된 기어박스 시스템과 3D 프린팅 기술을 접목하였다.</p>
                         </div>
 
                         <div class="mobileed">
                             <div class="p1photomob"></div>
                             <div class="p1mobiledes">
-                                <p>A gearbox system was designed to maximize the torque and speed of a small car. The system was a shifting one-stage gear network that consisted of gears, pinions, input and output shafts, bearings and housing. After calculations regarding the number of teeth and diameter of the gears and pinions, the system was modelled using Siemens NX and prepared for 3D printing.</p>
+                                <p>소형 자동차의 토크와 속도를 최대화하기 위하여 고안된 기어박스 시스템은 기어, 톱니 바퀴, 입출력 샤프트, 베어링과 하우징으로 구성된 shifting one-stage gear network 입니다. 톱니 개수, 기어와 톱니 바퀴의 직경 등을 계산한 후 Siemens NX를 적용한 모델링으로 완성된 기어박스 시스템과 3D 프린팅 기술을 접목하였다.</p>
                             </div>
                         </div>
                     </div>
@@ -207,40 +206,40 @@
 
                 <div class="accordian-item" id="project2"> 
                     <a class="accordian-link" href="#project2">
-                        <p>Controlling the pH Levels of Drinking Water</p>
+                        <p>식수 pH 제어 시스템</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
                     </a>
                     <div class="projectdescription">
-                        <p>An unknown "black box" system was analyzed and controlled for this project. By using principles of control theory, the system was designed to control the quality of drinking water. In order to achieve this, we analyzed the controllability and stability of the system. Some of the tools that were used for this project include PID-controllers, Bode and Nyquist plots, transfer functions, and the linear time-invariance property.</p>
+                        <p>제어 이론을 적용하여 미지의 블랙 박스 를 분석하고 제어하는 방볍을 고안하였다. 비례적분미분 제어기, 나이퀴스트 다이어그램, 전달 함수, 선형 시변형 성질 등의 기볍을 응용하여 시스템의 제어성과 안정성을 분석하고 식수의 품질을 개선하도록 설계하였다.</p>
                     </div>
                 </div>
 
                 <div class="accordian-item" id="project3"> 
                     <a class="accordian-link" href="#project3">
-                        <p>Optimization of Identifying Deforested Regions in the Amazon Rainforest</p>
+                        <p>아마존 열대우림의 벌채 지역 탐색 최적화 기법</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
                     </a>
                     <div class="projectdescription">
-                        <p>An unknown "black box" system was analyzed and controlled for this project. By using principles of control theory, the system was designed to control the quality of drinking water. In order to achieve this, we analyzed the controllability and stability of the system. Some of the tools that were used for this project include PID-controllers, Bode and Nyquist plots, transfer functions, and the linear time-invariance property.</p>
+                        <p>로이드 전개 알고리즘을 응용하여 아마존 우림 지역의 초목 밀도를 효과적으로 측정하는 드론 프로그램을 작성하여 최적화된 탐색 기법을 제공, 세계 최대 숲의 재조림에 가여하고자 하였다.</p>
                     </div>
                 </div>
 
                 <div class="accordian-item" id="project4"> 
                     <a class="accordian-link" href="#project4">
-                        <p>Removal of Plastics in Sewage Systems </p>
+                        <p>하수관의 플라스틱 제거</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
                     </a>
                     <div class="projectdescription">
-                        <p>A filtration system was designed to eliminate macro and microplastics in drainage and sewage systems. The designed solution used a dissolved air flotation process to effectively eliminate plastic in wastewater before it enters the treatment plant.</p>
+                        <p>하수의 최종 처리 공장 유입전, 하수관에서 dissolved air flotation을 사용하여 미세 플라스틱을 제거하는 정화시스템을 설계하였다.</p>
                     </div>
                 </div>
 
                 <div class="accordian-item" id="project5"> 
                     <a class="accordian-link" href="#project5">
-                        <p>Sexual Assault Centre Kingston Guidance Mobile Application</p>
+                        <p>Sexual Assault Centre Kingston 모바일 앱</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
                     </a>
@@ -248,17 +247,17 @@
                         <div class="p5photo"></div>
 
                         <div class="p5description">
-                            <p>A mobile application was made using JavaScript and Android Studio in order to provide guidance to victims and educate other young adults. The target audience for this project were those aged 16 to 24, which was requested by Sexual Assault Centre Kingston. 
+                            <p>JavaScript와 Android Studio를 이용하여 성범죄 피해자들에게 도움을 주고 젊은층을 교육하는 목적의 모바일 앱을 개발하였다. 이 프로젝트는 16세에서 24세를 주 이용 고객으로 Sexual Assault Centre Kingston의 요청으로 진행되었다.
                                 <br><br>
-                                The app consisted of four main sections: Resources, Scenarios, Consent, and Direct Questions. The Resources section was designed to provide the users with several helplines and sources. The Scenarios section is a quiz section that places the user in an observer's point of view where they witness an event taking place. The user would then choose an action they might take in order to help the victim. The Direct Questions section leads the user through a specific set of events that might have occurred to them. As the user specifies the situation in more depth, the app will guide them to a resource that is suited for their circumstances. Finally, the Consent section provides general information regarding consent and the laws surrounding it.</p>
+                                이 앱은 리소스, 시나리오, 직접 문항과 동의 절차 등의 네개의 주영역으로 구성되었다. 리소스는 도움이 필요한 사용자에게 요구되는 리소스를 안내해주고, 시나리오는 목격자의 관점에서 성범죄를 목격했을 때 퀴즈로 구성하여 피해자에게 필요한 도움을 줄수 있도록 유도하며, 직접 문항 영역은 사용자들이 경험했을수도 있는 특수한 사건과 상황에 적절한 가이드를 제공하며, 마지막으로 동의 영역은 법률과 동의에 관한 일반적인 정보를 제공한다.</p>
                         </div>
 
                         <div class="mobileed2">
                             <div class="p5photomob"></div>
                             <div class="p5mobiledes">
-                                <p>A mobile application was made using JavaScript and Android Studio in order to provide guidance to victims and educate other young adults. The target audience for this project were those aged 16 to 24, which was requested by Sexual Assault Centre Kingston. 
+                                <p>JavaScript와 Android Studio를 이용하여 성범죄 피해자들에게 도움을 주고 젊은층을 교육하는 목적의 모바일 앱을 개발하였다. 이 프로젝트는 16세에서 24세를 주 이용 고객으로 Sexual Assault Centre Kingston의 요청으로 진행되었다.
                                     <br><br>
-                                    The app consisted of four main sections: Resources, Scenarios, Consent, and Direct Questions. The Resources section was designed to provide the users with several helplines and sources. The Scenarios section is a quiz section that places the user in an observer's point of view where they witness an event taking place. The user would then choose an action they might take in order to help the victim. The Direct Questions section leads the user through a specific set of events that might have occurred to them. As the user specifies the situation in more depth, the app will guide them to a resource that is suited for their circumstances. Finally, the Consent section provides general information regarding consent and the laws surrounding it.</p>
+                                    이 앱은 리소스, 시나리오, 직접 문항과 동의 절차 등의 네개의 주영역으로 구성되었다. 리소스는 도움이 필요한 사용자에게 요구되는 리소스를 안내해주고, 시나리오는 목격자의 관점에서 성범죄를 목격했을 때 퀴즈로 구성하여 피해자에게 필요한 도움을 줄수 있도록 유도하며, 직접 문항 영역은 사용자들이 경험했을수도 있는 특수한 사건과 상황에 적절한 가이드를 제공하며, 마지막으로 동의 영역은 법률과 동의에 관한 일반적인 정보를 제공한다.</p>
                             </div>
                         </div>
                     </div>
@@ -266,12 +265,12 @@
 
                 <div class="accordian-item" id="project6"> 
                     <a class="accordian-link" href="#project6">
-                        <p>Mars Colony</p>
+                        <p>화성식민지</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
                     </a>
                     <div class="projectdescription">
-                        <p>A sustainable Mars Colony was designed using the resources that are already present on the planet and the few that can be brought from Earth. The modelling of this design was split into four main sections: Space Travel, Mining and Mineral Processing, Agriculture and Water, and Power. The amount of propellant and optimal route for travel was analyzed. Both the mining process and the food and water supply were also analyzed. Finally, the power supply to provide for approximately 1000 humans was also designed.</p>
+                        <p>지속 가능한 화성 식민지 건설 계획은 지구에서 수송 가능하거나 이미 제시된 리소스를 사용하여 우주 여행, 광물과 미네랄 프로세싱, 농업과 식수 그리고 에너지 등의 네개의 주영역으로 세분하여 모델링하였다. 우주 여행을 위한 최적 루트와 추진제를 계산하였고, 생존을 위한 농작물, 식수, 음식 조달과 광물 프로세싱을 분석하고, 인구 1000명의 생존을 위한 에너지 수급을 계산하였다.</p>
                     </div>
                 </div>
             </div>
