--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sang Park</title>
-    <meta name="viewport" content="width=device-width, initial scale=1.0">
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="style.css">
@@ -228,7 +227,7 @@
                         <i class="fas fa-minus"></i>
                     </a>
                     <div class="projectdescription">
-                        <p>An unknown "black box" system was analyzed and controlled for this project. By using principles of control theory, the system was designed to control the quality of drinking water. In order to achieve this, we analyzed the controllability and stability of the system. Some of the tools that were used for this project include PID-controllers, Bode and Nyquist plots, transfer functions, and the linear time-invariance property.</p>
+                        <p>An autonomous system that uses Lloyd's deployment algorithm was designed to program drones to effectively measure the density of the vegetation in an area of the Amazon Rainforest. The goal for this project was to optimize the identification process to facilitate reforestation in the largest forest in the world.</p>
                     </div>
                 </div>
 
@@ -255,7 +254,7 @@
                         <div class="p5description">
                             <p>A mobile application was made using JavaScript and Android Studio in order to provide guidance to victims and educate other young adults. The target audience for this project were those aged 16 to 24, which was requested by Sexual Assault Centre Kingston. 
                                 <br><br>
-                                The app consisted of four main sections: Resources, Scenarios, Consent, and Direct Questions. The Resources section was designed to provide the users with several helplines and sources. The Scenarios section is a quiz section that places the user in an observer's point of view where they witness an event taking place. The user would then choose an action they might take in order to help the victim. The Direct Questions section leads the user through a specific set of events that might have occurred to them. As the user specifies the situation in more depth, the app will guide them to a resource that is suited for their circumstances. Finally, the Consent section provides general information regarding consent and the laws surrounding it.</p>
+                                The app consisted of four main sections: Resources, Scenarios, Consent, and Direct Questions. The Resources section was designed to provide the users with several helplines and sources. The Scenarios section is a quiz section that places the user in an observer's point of view where they witness an event taking place. The user would then choose an action they might take in order to help the victim. The Direct Questions section leads the user through a specific set of events that might have occurred to them and ultimately guide them to a resource that is suited for their circumstances. Finally, the Consent section provides general information regarding consent and the laws surrounding it.</p>
                         </div>
 
                         <div class="mobileed2">
@@ -263,7 +262,7 @@
                             <div class="p5mobiledes">
                                 <p>A mobile application was made using JavaScript and Android Studio in order to provide guidance to victims and educate other young adults. The target audience for this project were those aged 16 to 24, which was requested by Sexual Assault Centre Kingston. 
                                     <br><br>
-                                    The app consisted of four main sections: Resources, Scenarios, Consent, and Direct Questions. The Resources section was designed to provide the users with several helplines and sources. The Scenarios section is a quiz section that places the user in an observer's point of view where they witness an event taking place. The user would then choose an action they might take in order to help the victim. The Direct Questions section leads the user through a specific set of events that might have occurred to them. As the user specifies the situation in more depth, the app will guide them to a resource that is suited for their circumstances. Finally, the Consent section provides general information regarding consent and the laws surrounding it.</p>
+                                    The app consisted of four main sections: Resources, Scenarios, Consent, and Direct Questions. The Resources section was designed to provide the users with several helplines and sources. The Scenarios section is a quiz section that places the user in an observer's point of view where they witness an event taking place. The user would then choose an action they might take in order to help the victim. The Direct Questions section leads the user through a specific set of events that might have occurred to them and ultimately guide them to a resource that is suited for their circumstances. Finally, the Consent section provides general information regarding consent and the laws surrounding it.</p>
                             </div>
                         </div>
                     </div>
