--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
         
         <div class="projectlist">
             <div class="accordian">
-                <div class="accordian-item" id="project1"> 
-                    <a class="accordian-link" href="#project1">
+                <div class="accordian-item" id="project1" onclick="invokeProto(0)"> 
+                    <div class="accordian-link">
                         <p>Gearbox Project</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
-                    </a>
+                    </div>
                     <div class="projectdescription">
                         <div class="p1photo">
                         </div>
@@ -209,45 +209,45 @@
                     </div>
                 </div>
 
-                <div class="accordian-item" id="project2"> 
-                    <a class="accordian-link" href="#project2">
+                <div class="accordian-item" id="project2" onclick="invokeProto(1)"> 
+                    <div class="accordian-link">
                         <p>Controlling the pH Levels of Drinking Water</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
-                    </a>
+                    </div>
                     <div class="projectdescription">
                         <p>An unknown "black box" system was analyzed and controlled for this project. By using principles of control theory, the system was designed to control the quality of drinking water. In order to achieve this, we analyzed the controllability and stability of the system. Some of the tools that were used for this project include PID-controllers, Bode and Nyquist plots, transfer functions, and the linear time-invariance property.</p>
                     </div>
                 </div>
 
-                <div class="accordian-item" id="project3"> 
-                    <a class="accordian-link" href="#project3">
+                <div class="accordian-item" id="project3" onclick="invokeProto(2)"> 
+                    <div class="accordian-link">
                         <p>Optimization of Identifying Deforested Regions in the Amazon Rainforest</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
-                    </a>
+                    </div>
                     <div class="projectdescription">
                         <p>An autonomous system that uses Lloyd's deployment algorithm was designed to program drones to effectively measure the density of the vegetation in an area of the Amazon Rainforest. The goal for this project was to optimize the identification process to facilitate reforestation in the largest forest in the world.</p>
                     </div>
                 </div>
 
-                <div class="accordian-item" id="project4"> 
-                    <a class="accordian-link" href="#project4">
+                <div class="accordian-item" id="project4" onclick="invokeProto(3)"> 
+                    <div class="accordian-link">
                         <p>Removal of Plastics in Sewage Systems </p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
-                    </a>
+                    </div>
                     <div class="projectdescription">
                         <p>A filtration system was designed to eliminate macro and microplastics in drainage and sewage systems. The designed solution used a dissolved air flotation process to effectively eliminate plastic in wastewater before it enters the treatment plant.</p>
                     </div>
                 </div>
 
-                <div class="accordian-item" id="project5"> 
-                    <a class="accordian-link" href="#project5">
+                <div class="accordian-item" id="project5" onclick="invokeProto(4)"> 
+                    <div class="accordian-link">
                         <p>Sexual Assault Centre Kingston Guidance Mobile Application</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
-                    </a>
+                    </div>
                     <div class="projectdescription">
                         <div class="p5photo"></div>
 
@@ -268,12 +268,12 @@
                     </div>
                 </div>
 
-                <div class="accordian-item" id="project6"> 
-                    <a class="accordian-link" href="#project6">
+                <div class="accordian-item" id="project6" onclick="invokeProto(5)"> 
+                    <div class="accordian-link">
                         <p>Mars Colony</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
-                    </a>
+                    </div>
                     <div class="projectdescription">
                         <p>A sustainable Mars Colony was designed using the resources that are already present on the planet and the few that can be brought from Earth. The modelling of this design was split into four main sections: Space Travel, Mining and Mineral Processing, Agriculture and Water, and Power. The amount of propellant and optimal route for travel was analyzed. Both the mining process and the food and water supply were also analyzed. Finally, the power supply to provide for approximately 1000 humans was also designed.</p>
                     </div>
@@ -300,5 +300,6 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="scroll.js"></script>
+    <script src="projects.js"></script>
 </body>
 </html>
