--- a/korean.html
+++ b/korean.html
@@ -182,12 +182,12 @@
         
         <div class="projectlist">
             <div class="accordian">
-                <div class="accordian-item" id="project1"> 
-                    <a class="accordian-link" href="#project1">
+                <div class="accordian-item" id="project1" onclick="invokeProto(0)"> 
+                    <div class="accordian-link">
                         <p>기어박스 프로젝트</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
-                    </a>
+                    </div>
                     <div class="projectdescription">
                         <div class="p1photo">
                         </div>
@@ -204,45 +204,45 @@
                     </div>
                 </div>
 
-                <div class="accordian-item" id="project2"> 
-                    <a class="accordian-link" href="#project2">
+                <div class="accordian-item" id="project2" onclick="invokeProto(1)"> 
+                    <div class="accordian-link">
                         <p>식수 pH 제어 시스템</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
-                    </a>
+                    </div>
                     <div class="projectdescription">
                         <p>제어 이론을 적용하여 미지의 블랙 박스 를 분석하고 제어하는 방볍을 고안하였다. 비례적분미분 제어기, 나이퀴스트 다이어그램, 전달 함수, 선형 시변형 성질 등의 기볍을 응용하여 시스템의 제어성과 안정성을 분석하고 식수의 품질을 개선하도록 설계하였다.</p>
                     </div>
                 </div>
 
-                <div class="accordian-item" id="project3"> 
-                    <a class="accordian-link" href="#project3">
+                <div class="accordian-item" id="project3" onclick="invokeProto(2)"> 
+                    <div class="accordian-link">
                         <p>아마존 열대우림의 벌채 지역 탐색 최적화 기법</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
-                    </a>
+                    </div>
                     <div class="projectdescription">
                         <p>로이드 전개 알고리즘을 응용하여 아마존 우림 지역의 초목 밀도를 효과적으로 측정하는 드론 프로그램을 작성하여 최적화된 탐색 기법을 제공, 세계 최대 숲의 재조림에 가여하고자 하였다.</p>
                     </div>
                 </div>
 
-                <div class="accordian-item" id="project4"> 
-                    <a class="accordian-link" href="#project4">
+                <div class="accordian-item" id="project4" onclick="invokeProto(3)"> 
+                    <div class="accordian-link">
                         <p>하수관의 플라스틱 제거</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
-                    </a>
+                    </div>
                     <div class="projectdescription">
                         <p>하수의 최종 처리 공장 유입전, 하수관에서 dissolved air flotation을 사용하여 미세 플라스틱을 제거하는 정화시스템을 설계하였다.</p>
                     </div>
                 </div>
 
-                <div class="accordian-item" id="project5"> 
-                    <a class="accordian-link" href="#project5">
+                <div class="accordian-item" id="project5" onclick="invokeProto(4)"> 
+                    <div class="accordian-link">
                         <p>Sexual Assault Centre Kingston 모바일 앱</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
-                    </a>
+                    </div>
                     <div class="projectdescription">
                         <div class="p5photo"></div>
 
@@ -263,12 +263,12 @@
                     </div>
                 </div>
 
-                <div class="accordian-item" id="project6"> 
-                    <a class="accordian-link" href="#project6">
+                <div class="accordian-item" id="project6" onclick="invokeProto(5)"> 
+                    <div class="accordian-link">
                         <p>화성식민지</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
-                    </a>
+                    </div>
                     <div class="projectdescription">
                         <p>지속 가능한 화성 식민지 건설 계획은 지구에서 수송 가능하거나 이미 제시된 리소스를 사용하여 우주 여행, 광물과 미네랄 프로세싱, 농업과 식수 그리고 에너지 등의 네개의 주영역으로 세분하여 모델링하였다. 우주 여행을 위한 최적 루트와 추진제를 계산하였고, 생존을 위한 농작물, 식수, 음식 조달과 광물 프로세싱을 분석하고, 인구 1000명의 생존을 위한 에너지 수급을 계산하였다.</p>
                     </div>
@@ -295,5 +295,6 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="scroll.js"></script>
+    <script src="projects.js"></script>
 </body>
 </html>
