--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div class="about">
             <h3>Hi, I'm Sang Park.</h3>
-            <p>I  am a dedicated Applied Mathematics and Mechanical Engineering student who has exemplified leadership and teamwork skills through multiple group projects. I have experienced and built a deep understanding in a variety of engineering topics, such as control systems, mechanical systems, automation, and app development. 
+            <p>I  am a dedicated Applied Mathematics and Mechanical Engineering student who has exemplified leadership and teamwork skills through multiple group projects. I have a deep understanding of a variety of engineering topics, such as control systems, mechanical systems, automation, and app development. 
                 <br><br>
             I am passionate about analyzing data and statistics. I also take great interest in optimizing control systems and mechanical systems. I hope to become a data scientist or mechanical engineer in order to display my skills and pursue my passions. </p>
         </div>
@@ -160,7 +160,7 @@
 
                     <p>Queen's University has allowed me to pursue a unique degree that could satisfy both my interests in engineering and mathematics. Through the Applied Mathematics and Mechanical Engineering program, I was able to learn high-level mathematical concepts and also solve open-ended problems through critical and creative thinking. This program has not only enhanced my problem solving and analytical skills, but also helped me improve on my teamwork and communication skills. 
                         <br><br>
-                    The rigorous courseload that this program offers has inspired me to pursue mechanical engineering or data science. Through courses such as Machine Design I, Kinematics, Dynamics, and Vibrations, I got the opportunity to understand and design mechanical systems. Math courses like Real Analysis, Algebraic Structures, and Functions of a Complex Variable, has challenged me to understand abstract theories and concepts. My interests in data analysis grew due to courses like Probability I and Management of Experimental Data. Finally, design courses and mechanical engineering labs has given me the opportunity to apply and analyze the theories that were learned in class.</p>
+                    The rigorous courseload that this program offers has inspired me to pursue mechanical engineering or data science. Through courses such as Machine Design I, Kinematics, Dynamics, and Vibrations, I got the opportunity to understand and design mechanical systems. Math courses like Real Analysis, Algebraic Structures, and Functions of a Complex Variable, have challenged me to understand abstract theories and concepts. My interests in data analysis grew due to courses like Probability I and Management of Experimental Data. Finally, design courses and mechanical engineering labs have given me the opportunity to apply and analyze the theories that were learned in class.</p>
                 </div>
             </div>
 
@@ -174,7 +174,7 @@
                         Calgary, Alberta, Canada
                     </div>
 
-                    <p>Webber Academy, one of the highest ranked high schools in Alberta, has inspired me to pursue engineering and mathematics. The tight-knit community allowed me to develop a strong relationship with my peers and teachers. Furthermore, the smaller community increased my engagement in the classroom, expecially in STEM courses. Webber Academy was also where I instilled a team-oriented mindset and developed my leadership capabilities as the captain of the basketball team. I was also able to be part of a team that raised over $40,000 for the Terry Fox Foundation.</p>
+                    <p>Webber Academy, one of the highest ranked high schools in Alberta, inspired me to pursue engineering and mathematics. The tight-knit community allowed me to develop a strong relationship with my peers and teachers. Furthermore, the smaller community increased my engagement in the classroom, expecially in STEM courses. Webber Academy was also where I developed a team-oriented mindset and leadership capabilities as the captain of the basketball team. I was also able to be part of a team that raised over $40,000 for the Terry Fox Foundation.</p>
                 </div>
             </div>
         </div>
