Updated Resume and Project

--- a/index.html
+++ b/index.html
@@ -189,6 +189,17 @@
             <div class="accordian">
                 <div class="accordian-item" id="project1" onclick="invokeProto(0)"> 
                     <div class="accordian-link">
+                        <p>Stochastic Control of a Multi-Agent System for Automated-Warehouse Fleet Management</p>
+                        <i class="fas fa-plus"></i>
+                        <i class="fas fa-minus"></i>
+                    </div>
+                    <div class="projectdescription">
+                        <p>Q-Learning was implemented to find an optimal policy for warehouse robots to follow. Function approximation methods, like coarse coding and artifical neural networks, were also studied for the robots to have a more efficient learning behaviour. This project mathematically modelled this multi-agent system, which was simulated using Python. The robots were also trained to follow an optimal policy where they learned to carry the inventory stacks within the warehouse to the picking station.</p>
+                    </div>
+                </div>
+
+                <div class="accordian-item" id="project2" onclick="invokeProto(1)"> 
+                    <div class="accordian-link">
                         <p>Gearbox Project</p>
                         <i class="fas fa-plus"></i>
                         <i class="fas fa-minus"></i>
@@ -209,7 +220,7 @@
                     </div>
                 </div>
 
-                <div class="accordian-item" id="project2" onclick="invokeProto(1)"> 
+                <div class="accordian-item" id="project3" onclick="invokeProto(2)"> 
                     <div class="accordian-link">
                         <p>Controlling the pH Levels of Drinking Water</p>
                         <i class="fas fa-plus"></i>
@@ -220,7 +231,7 @@
                     </div>
                 </div>
 
-                <div class="accordian-item" id="project3" onclick="invokeProto(2)"> 
+                <div class="accordian-item" id="project4" onclick="invokeProto(3)"> 
                     <div class="accordian-link">
                         <p>Optimization of Identifying Deforested Regions in the Amazon Rainforest</p>
                         <i class="fas fa-plus"></i>
@@ -231,7 +242,7 @@
                     </div>
                 </div>
 
-                <div class="accordian-item" id="project4" onclick="invokeProto(3)"> 
+                <div class="accordian-item" id="project5" onclick="invokeProto(4)"> 
                     <div class="accordian-link">
                         <p>Removal of Plastics in Sewage Systems </p>
                         <i class="fas fa-plus"></i>
@@ -242,7 +253,7 @@
                     </div>
                 </div>
 
-                <div class="accordian-item" id="project5" onclick="invokeProto(4)"> 
+                <div class="accordian-item" id="project6" onclick="invokeProto(5)"> 
                     <div class="accordian-link">
                         <p>Sexual Assault Centre Kingston Guidance Mobile Application</p>
                         <i class="fas fa-plus"></i>
@@ -268,7 +279,7 @@
                     </div>
                 </div>
 
-                <div class="accordian-item" id="project6" onclick="invokeProto(5)"> 
+                <div class="accordian-item" id="project7" onclick="invokeProto(6)"> 
                     <div class="accordian-link">
                         <p>Mars Colony</p>
                         <i class="fas fa-plus"></i>
