--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#about">about.</a></li>
                 <li><a href="#education">education.</a></li>
                 <li><a href="#projects">projects.</a></li>
-                <li><a href="Resume.pdf" target="_blank">resume.</a></li>
+                <li><a href="SangPark-Resume.pdf" target="_blank">resume.</a></li>
                 <div class="dropdown">
                     <button class="dropbtn">languages.
                         <i class="fas fa-caret-down"></i>
