--- a/korean.html
+++ b/korean.html
@@ -23,7 +23,7 @@
                 <li><a href="#about">자기 소개.</a></li>
                 <li><a href="#education">교육.</a></li>
                 <li><a href="#projects">프로젝트.</a></li>
-                <li><a href="Resume.pdf" target="_blank">이력서.</a></li>
+                <li><a href="SangPark-Resume.pdf" target="_blank">이력서.</a></li>
                 <div class="dropdown">
                     <button class="dropbtn">언어 선택.
                         <i class="fas fa-caret-down"></i>
